--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,13 @@ authors = [
     "Runtime Verification, Inc. <contact@runtimeverification.com>",
 ]
 
+[tool.poetry.plugins.kdist]
+zkevm-semantics = "zkevm_harness.kdist.plugin"
+
 [tool.poetry.dependencies]
 python = "^3.10"
+kriscv = { git = "https://github.com/runtimeverification/riscv-semantics.git", tag =  "v0.1.53" }
+web3 = "^7.9.0"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "*"
@@ -29,6 +34,9 @@ pytest-cov = "*"
 pytest-mock = "*"
 pytest-xdist = "*"
 pyupgrade = "*"
+
+[tool.pytest.ini_options]
+log_level = "INFO"
 
 [tool.isort]
 profile = "black"
