--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -17,12 +17,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
-      - name: 'Install Poetry'
-        uses: Gr1N/setup-poetry@v9
+      - name: 'Install uv'
+        uses: astral-sh/setup-uv@v6
         with:
-          poetry-version: '2.1.1'
-      - name: 'Install dependencies'
-        run: poetry install
+          version: '0.7.8'
       - name: 'Run code quality checks'
         run: make check
       - name: 'Run pyupgrade'
@@ -43,8 +41,6 @@ jobs:
         uses: ./.github/actions/with-docker
         with:
           container-name: ${CONTAINER}
-      - name: 'Install dependencies'
-        run: docker exec -u user ${CONTAINER} poetry install
       - name: 'Build K definitions'
         run: docker exec -u user ${CONTAINER} make kdist
       - name: 'Run integration tests'
