--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,38 +1,50 @@
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.poetry]
+[project]
 name = "zkevm-harness"
 version = "0.1.0"
 description = ""
-authors = [
-    "Runtime Verification, Inc. <contact@runtimeverification.com>",
+readme = "README.md"
+requires-python = "~=3.10"
+dependencies = [
+    "kriscv@git+https://github.com/runtimeverification/riscv-semantics.git@v0.1.95"
 ]
 
-[tool.poetry.plugins.kdist]
+[[project.authors]]
+name = "Runtime Verification, Inc."
+email = "contact@runtimeverification.com"
+
+[project.entry-points.kdist]
 zkevm-semantics = "zkevm_harness.kdist.plugin"
 
-[tool.poetry.dependencies]
-python = "^3.10"
-kriscv = { git = "https://github.com/runtimeverification/riscv-semantics.git", tag = "v0.1.95" }
+[dependency-groups]
+dev = [
+    "autoflake",
+    "black",
+    "flake8",
+    "flake8-bugbear",
+    "flake8-comprehensions",
+    "flake8-quotes",
+    "flake8-type-checking",
+    "isort",
+    "mypy",
+    "pep8-naming",
+    "pytest",
+    "pytest-cov",
+    "pytest-mock",
+    "pytest-xdist",
+    "pyupgrade",
+]
 
-[tool.poetry.group.dev.dependencies]
-autoflake = "*"
-black = "*"
-flake8 = "*"
-flake8-bugbear = "*"
-flake8-comprehensions = "*"
-flake8-quotes = "*"
-flake8-type-checking = "*"
-isort = "*"
-mypy = "*"
-pep8-naming = "*"
-pytest = "*"
-pytest-cov = "*"
-pytest-mock = "*"
-pytest-xdist = "*"
-pyupgrade = "*"
+[tool.uv]
+override-dependencies = [
+    "gitpython>3.1.17,<4",
+]
+
+[tool.hatch.metadata]
+allow-direct-references = true
 
 [tool.pytest.ini_options]
 log_level = "INFO"
